--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv-cli": "^4.0.0",
-    "semantic-release": "^17.4.4",
-    "semantic-release-cli": "^5.4.3"
+    "semantic-release": "^17.2.1",
+    "semantic-release-cli": "^5.4.0"
   },
   "scripts": {
     "test": "echo \"No tests yet\"",
-    "semantic-release": "dotenv semantic-release"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
