--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Component for media upload",
   "main": "index.js",
   "dependencies": {
-    "@kvass/vue2-icon": "^1.0.3",
     "@kvass/card": "^1.0.3",
     "@linusborg/vue-simple-portal": "^0.1.5",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "mime": "^3.0.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
+    "vue": "^2.6.14",
     "vue-elder-button": "^1.7.1",
     "vue-elder-dropdown": "^1.5.6",
-    "vue-elder-input": "^1.9.3",
     "vue-elder-modal": "^1.0.5",
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.6.14",
     "vue-youtube": "^1.4.0",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
