--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Component for media upload",
   "main": "index.js",
   "dependencies": {
-    "@kvass/card": "^1.0.3",
     "@kvass/vue2-icon": "^1.0.3",
+    "@kvass/card": "^1.0.3",
     "@linusborg/vue-simple-portal": "^0.1.5",
     "mime": "^3.0.0",
     "vue-elder-button": "^1.7.1",
@@ -16,18 +16,13 @@
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8",
     "cz-conventional-changelog": "^3.3.0",
-    "sass": "^1.89.2",
-    "sass-loader": "^16.0.5",
     "semantic-release": "^17.2.1",
-    "semantic-release-cli": "^5.4.0",
-    "vue-template-compiler": "^2.7.16"
+    "semantic-release-cli": "^5.4.0"
   },
   "scripts": {
     "test": "echo \"No tests yet\"",
-    "semantic-release": "semantic-release",
-    "dev": "vue-cli-service serve demo/main.js"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
